# ink_stroke_export

./: .gitmodules  README.md
example files/journal/: inkml_firstpage.xml  inkml_secondpage.xml
example files/nebo/Document test/: index.bdom  meta.json  rel.json
example files/nebo/Document test/pages/kzeozqpj/: ink.bink  kzeozqpj.jiix  meta.json  page.bdom  style.css
example files/nebo/test_infinite/: index.bdom  meta.json  rel.json
example files/nebo/test_infinite/pages/icvgshpp/: icvgshpp.jiix  ink.bink  meta.json  page.bdom
example files/onenote/: Quick Notes.one  html_format.html  inkml.xml  mathml presentation.xml
nebo_to_rnote/: Cargo.toml  README.md
nebo_to_rnote/src/: main.rs
